@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added on_connect hook, triggered after we receive 001.
     * Updated hooks to use hashrefs.
     * Moved CTCP VERSION reply to Core::IRC.
     * Renamed Core::IRC to Core::Cmd.
